tests/should_fail/let_struct_on_int.nv
module fail
// Let destructure: struct on non-struct value
struct Point { x: Int, y: Int }
let Point { x, y } = 42
